# vinject

./: .gitignore  README.md  meson.build
src/: InstantiationType.vala  ServiceTypes.vala  Vinject.vala  meson.build
