project('Vinject', 'vala', 'c', version: '0.0.1', license: 'GPL')

#dependencies = [
#    dependency('gee-0.8'),
#    dependency('gdk-pixbuf-2.0'),
#    dependency('gio-2.0')
#]

dependencies = [
    dependency('glib-2.0'),
    dependency('gobject-2.0'),
    dependency('gee-0.8'),
    dependency('gio-2.0'),
    #dependency('gdk-pixbuf-2.0'),
]



subdir('src')

